--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body>
   <header class="header">
-
+  <div>
     <h1>Fun Bus</h1>
-
+</div>
     <nav class="nav">
       <a href="#">Home</a>
       <a href="#">About Us</a>
@@ -51,6 +51,7 @@
         <h2>Let's Go!</h2>
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p>
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
+
       </div>
       <div class="img-content">
         <img src="img/adventure.jpg" alt="Let's go on an adventure!">
@@ -79,7 +80,7 @@
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
         <button class="btn">Sign Me Up!</button>
-      
+
       </div>
 
       <div class="destination">
